fix: image rendering in mobile fixed, Audio icon alignment in css fixed

--- a/renderer/styles/style.css
+++ b/renderer/styles/style.css
@@ -176,7 +176,7 @@
 }
 
 .mtf-container .mtf-content-container .mtf-options-container .mtf-options-vertical-container .lhs-rhs-container .lhs-block img.audio-image{
-    top:3%;
+    top:5%;
 }
 
 .mtf-container .mtf-content-container .mtf-options-container .mtf-options-vertical-container .lhs-rhs-container .rhs-block img.background-image{
@@ -184,7 +184,7 @@
 }
 
 .mtf-container .mtf-content-container .mtf-options-container .mtf-options-vertical-container .lhs-rhs-container .rhs-block img.audio-image{
-    bottom:4%;
+    bottom:8%;
 }
 
 .mtf-container .mtf-content-container .mtf-options-container .mtf-options-vertical-container .lhs-rhs-container .lhs-block img.option-image{
